syntax = "proto3";

package question_v1;

option go_package = "github.com/Kosfedev/learn_go/pkg/question_v1;question_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Service Api"
    version: "1.0"
  }
  tags: {
    name: "Question"
    description: "Операции с отдельными вопросами"
  }
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service QuestionV1 {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/question"
      body: "*"
    };
  };
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/v1/question/{id}"
    };
  };
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/v1/question/{id}"
      body: "*"
    };
  };
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/v1/question/{id}"
    };
  };
}

enum QuestionType {
  QUESTION_TYPE_UNSPECIFIED = 0;
  QUESTION_TYPE_SINGLE = 1;
  QUESTION_TYPE_MULTI = 2;
  QUESTION_TYPE_OPEN = 3;
}

message Question {
  int64 id = 1;
  string text = 2;
  QuestionType question_type = 3;
  google.protobuf.StringValue reference_answer = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message NewQuestion {
  string text = 1;
  QuestionType question_type = 2;
  google.protobuf.StringValue reference_answer = 4;
}

message CreateRequest {
  NewQuestion data = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  Question data = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue text = 2;
  // TODO: заменить для обратной совместимости?
  optional QuestionType question_type = 3;
  google.protobuf.StringValue reference_answer = 4;
}

message UpdateResponse {
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
}