syntax = "proto3";

package set_form_v1;

option go_package = "github.com/Kosfedev/learn_go/pkg/set_form_v1;set_form_v1";

import "question.proto";
import "set.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Service Api"
    version: "1.0"
  }
  tags: {
    name: "Set Form"
    description: "Операции по получению агрегированых данных по наборам вопросов и связанным сущностям"
  }
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service SetFormV1 {
  rpc GetWithQuestions(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/api/v1/set_form/{id}"
    };
  };
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  message Data {
    set_v1.Set set = 1;
    repeated question_v1.Question questions = 2;
  }

  Data data = 1;
}
